# AuraCar

./: .gitignore  README.md
carla_ws/config/: multi_vehicle.yaml
carla_ws/src/carla_bringup/: package.xml  setup.cfg  setup.py
carla_ws/src/carla_bringup/launch/: multi_vehicle_bringup.launch.py
carla_ws/src/carla_front_camera/: package.xml  setup.cfg  setup.py
carla_ws/src/carla_front_camera/carla_front_camera/: front_camera_node.py
carla_ws/src/carla_teleop_keyboard/: package.xml  setup.cfg  setup.py
carla_ws/src/carla_teleop_keyboard/carla_teleop_keyboard/: teleop_keyboard_node.py
carla_ws/src/carla_teleop_keyboard/launch/: teleop_keyboard.launch.py
carla_ws/src/carla_vehicle_controller/: package.xml  setup.cfg  setup.py
carla_ws/src/carla_vehicle_controller/carla_vehicle_controller/: vehicle_controller_node.py
carla_ws/src/carla_world_manager/: package.xml  setup.cfg  setup.py
carla_ws/src/carla_world_manager/carla_world_manager/: __init__.py  world_manager_node.py
demo/carla_camera/: carla_camera_node.py
demo/clrnet/: README.md
demo/clrnet/python_demo/: demo.py
demo/clrnet/scripts/: sample_build.sh
demo/clrnet/src/: CMakeLists.txt  sampleCLRNet.cpp
demo/usb_camera/: CMakeLists.txt  main.cpp
demo/yolo11/: README.md
demo/yolo11/scripts/: sample_build.sh
demo/yolo11/src/: CMakeLists.txt  sampleYOLO11.cpp
demo/yolo11_seg/: README.md
demo/yolo11_seg/scripts/: sample_build.sh  sample_run.sh
demo/yolo11_seg/src/: CMakeLists.txt  label.h  sampleYOLO11_SEG.cpp
demo/yolov7/: README.md
demo/yolov7/scripts/: sample_build.sh
demo/yolov7/src/: CMakeLists.txt
demo/yolov8/: README.md
demo/yolov8/scripts/: sample_build.sh  sample_run.sh
demo/yolov8/src/: sampleYOLOV8.cpp
demo/yolov8_seg/: README.md
demo/yolov8_seg/scripts/: sample_build.sh
demo/yolov8_seg/src/: CMakeLists.txt  label.h  sampleYOLOV8_SEG.cpp
dev_ws/config/: environment_detection.yaml  image_compressed_to_nv12.yaml  lane_detection.yaml  usb_camera.yaml  usb_camera_dvpp.yaml
dev_ws/model/clrnet/: README.md  aipp.cfg
dev_ws/model/yolo11_seg/: README.md  aipp.cfg
dev_ws/src/environment_detection/: CMakeLists.txt  package.xml
dev_ws/src/environment_detection/include/environment_detection/: yolo11_seg_infer.hpp
dev_ws/src/environment_detection/launch/: environment_detection.launch.py
dev_ws/src/environment_detection/src/: environment_detection_node.cpp  postprocess.cpp  yolo11_seg_infer.cpp
dev_ws/src/image_compressed_to_nv12/: CMakeLists.txt  package.xml
dev_ws/src/image_compressed_to_nv12/launch/: image_compressed_to_nv12.launch.py
dev_ws/src/image_compressed_to_nv12/src/: image_compressed_to_nv12_node.cpp
dev_ws/src/lane_detection/: CMakeLists.txt  package.xml
dev_ws/src/lane_detection/include/lane_detection/: clrnet_infer.hpp  postprocess.hpp
dev_ws/src/lane_detection/launch/: lane_detection.launch.py
dev_ws/src/lane_detection/src/: clrnet_infer.cpp  lane_detection_node.cpp  postprocess.cpp
dev_ws/src/usb_camera/: CMakeLists.txt  package.xml
dev_ws/src/usb_camera/launch/: usb_camera.launch.py  usb_camera_dvpp.launch.py
dev_ws/src/usb_camera/src/: usb_camera_node.cpp  usb_camera_node_dvpp.cpp
model/yolo11_seg/: culane_to_yolo11_seg.py  export_to_onnx.py  predict.py  train.py
