<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lane_detection</name>
  <version>0.0.1</version>
  <description>车道线推理节点</description>
  <maintainer email="jasper.zhengyi.xu@gmail.com">JasperXzy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>foxglove_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
